--- a/index.html
+++ b/index.html
@@ -44,55 +44,7 @@
 	<header style="padding-bottom:20px;">
 	</header>
     <div class="container main-container" style="padding-top:20px;">
-	
 	<!--  Mulai content  -->
-	
-	<script>
-	/*	
-	$(document).ready(function($) {
-		$('.closePopUp').click(function(event) {
-				var idd = this.id;
-				var ide = idd.replace(/\D/g,'');
-				$('#intro'+ide).slideUp('300',function(){
-				$('#dark'+ide).fadeOut('400', function() {
-				});
-			});
-		});
-	
-	$(function(){
-		    $(".dark-bg").hide();
-			$(".intro-bg").hide();
-		    $('.btn.btn-primary.btn-block.blue-button').click(function(event) {
-					var idd = this.id;
-					var ide = idd.replace(/\D/g,'');
-					$('#dark'+ide).fadeIn('300', function() {
-					$('#intro'+ide).slideDown('100');
-				});
-			});
-	    });
-	});*/	
-</script>
-	<div class="container view">
-		<div id="dark0" class="dark-bg" style="display: none;"></div>
-		<div id="intro0" class="intro-bg col-sm-12 col-md-6 col-md-offset-2" style="display: none;">
-			<div id="it-intro0">
-					<div class="it-test-panel">
-					<i id="button0" class="fa fa-times-circle closePopUp"></i>
-						<h3>sfdsfds</h3>
-						<p class="subheading">4435435.00</p>
-							<div class="row">
-								<div class="col-md-6">
-									<p></p><p>fgfd fdgfdg fdgfdg</p><p></p>
-								</div>
-								<div class="col-md-6">
-									AAAAAAAAAAA
-								</div>
-							</div>
-					</div>
-				</div>
-		</div>
-	</div>
-	
 <div class="row">
 	<div class="col-md-12" style="padding-bottom:20px;">
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="display: block;">
@@ -130,11 +82,11 @@
 								<div class="btn-group pull-left" style="margin-right:10px;">
 									<a class="btn btn-primary dropdown-toggle blue-button" data-toggle="dropdown" href="http://localhost/onlineshop/#">Kategori <span class="caret"></span></a> 
 									<ul class="dropdown-menu">
-									<li><a href="http://localhost/onlineshop/#">Clothes</a></li>
-									<li><a href="http://localhost/onlineshop/#">Shoes</a></li>
-									<li><a href="http://localhost/onlineshop/#">Bag</a></li>
-									<li><a href="http://localhost/onlineshop/#">Accesories</a></li>
-									<li><a href="http://localhost/onlineshop/#">Watch</a></li>
+									<li><a href="http://localhost/onlineshop/#">Pakaian</a></li>
+									<li><a href="http://localhost/onlineshop/#">Sepatu</a></li>
+									<li><a href="http://localhost/onlineshop/#">Tas</a></li>
+									<li><a href="http://localhost/onlineshop/#">Aksesoris</a></li>
+									<li><a href="http://localhost/onlineshop/#">Jam Tangan</a></li>
 								  </ul>
 								</div>
 								<div class="input-group">
@@ -157,8 +109,8 @@
 			  <div class="corner-ribbon top-left sticky green shadow" style="z-index:999999;opacity: green;">New Product</div>
 			   <img src="./asset/img/tasbranded.jpg" width="100" height="200" style="z-index:1;margin-top:-50px;">
                 <div class="caption">
-                  <h4 style="font-weight:bold;text-align:center;">Tas Branded</h4>
-                  <p></p><p>Harga murah tapi berkualitas</p><p></p>
+                  <p style="font-weight:bold;text-align:center;font-size:13px;">Tas Backpack Korean Bag LLC7202</p>
+                  <p></p><p>Tas ransel bermodel vintage ini sangat cocok utk kalian yang sering beraktifitas outdoor...</p><p></p>
                   <p align="center"><a href="#fadeandscale" id="button0" class="btn btn-primary btn-block blue-button fadeandscale_open">Lihat</a></p>
                 </div>
               </div>
@@ -168,8 +120,8 @@
 			  <div class="corner-ribbon top-left sticky blue shadow" style="z-index:999999;opacity: blue;">Best Seller</div>
 			   <img src="./asset/img/tasgunung.jpg" width="100" height="200" style="z-index:1;margin-top:-50px;">
                 <div class="caption">
-                  <h4 style="font-weight:bold;text-align:center;">Tas Gunung</h4>
-                  <p></p><p>Kuat dan mudah digunakan</span></p><p></p>
+                  <p style="font-weight:bold;text-align:center;font-size:13px;">Catenzo Unisex - Canvas 458 St 042</p>
+                  <p></p><p>Ini adalah produk catenzo baru katalog edisi 2016-2017, jangan sampai ketinggalan...</span></p><p></p>
                   <p align="center"><a href="#fadeandscale2" id="button0" class="btn btn-primary btn-block blue-button fadeandscale2_open">Lihat</a></p>
                 </div>
               </div>
@@ -229,9 +181,7 @@
         		<div class="column">
         			<h4 style="font-weight:900"><i class="fas fa-quote-right circle-icon"></i> Tentang Kami</h4>
         			<ul style="color:#c3c6c8;">
-        				<li>jshad sgfsdjfg jsdfgjsdfdsf dsfdsfgs dfsdjfgdsjf dsfgjdsfg dsgfjdsf
-        				jshad sgfsdjfg jsdfgjsdfdsf dsfdsfgs dfsdjfgdsjf dsfgjdsfg dsgfjdsf
-        				jshad sgfsdjfg jsdfgjsdfdsf dsfdsfgs dfsdjfgdsjf dsfgjdsfg dsgfjdsf</li>
+        				<li>Fifteen OlShop adalah toko online yang menyediakan berbagai jenis kebutuhan fashion khususnya pria seperti sepatu, tas, pakaian dan lain-lain, dengan harga yang bersaing.</li>
         			</ul>
         		</div>
         	</div>
@@ -270,7 +220,7 @@
     	<i class="fa fa-times-circle fadeandscale_close" style="font-size:23px;cursor: pointer;position:absolute;margin:-24px 0px 20px 362px;z-index:4000"></i>
     	<i class="fas fa-circle" style="color:white;font-size:26px;cursor: pointer;position:absolute;margin:-25px 0px 20px 360.5px;z-index:3000"></i>
     	<center>
-	    <h4 style="font-weight:bold;">Tas Branded</h4><br>
+	    <h4 style="font-weight:bold;">Tas Backpack Korean Bag LLC7202</h4><br>
 	    <img src="./asset/img/tasbranded.jpg" class="img-responsive" style="z-index:1;">
 	    <div style="font-weight:bold;font-size:30px;color:#74c5e6;" class="price">
 	    	<a class="price-label" style="text-decoration:none;cursor: pointer;" title="" data-toggle="tooltip" data-placement="right" val="100">$100</a>
@@ -283,7 +233,7 @@
 			<label for="stars-rating-1"><i class="fa fa-star text-warning"></i></label>
 		</div>
 		<div style="max-width:350px;text-align:left">
-			jshad sgfsdjfg jsdfgjsdfdsf dsfdsfgs dfsdjfgdsjf dsfgjdsfg dsgfjdsf
+			Tas ransel bermodel vintage ini sangat cocok utk kalian yang sering beraktifitas outdoor, dengan material bahan kanvas import berkualitas tinggi sangat kuat untuk membawa banyak barang. Memberikan kesan casual dan elegan bagi kalian yang menggunakannya. Cocok untuk membawa segala jenis ukuran laptop dapat membawa banyak buku pelajaran maupun dokumen.
 		</div>
 		<div class="row" style="text-align:left;padding: 20px 0 0 0;">
 			<div class="col-md-12"> 
@@ -294,8 +244,33 @@
 		</div>
 		</center>	
 	</div>
-	<div id="fadeandscale2" class="well popuproduct" style="min-width:400px;margin-top:100px;">
-	    <h4>Contoh 2</h4>
+	    <div id="fadeandscale2" class="well popuproduct" style="min-width:400px;margin-top:30px;position:relative;background-color: #ffffff;">
+    	<i class="fa fa-times-circle fadeandscale_close" style="font-size:23px;cursor: pointer;position:absolute;margin:-24px 0px 20px 362px;z-index:4000"></i>
+    	<i class="fas fa-circle" style="color:white;font-size:26px;cursor: pointer;position:absolute;margin:-25px 0px 20px 360.5px;z-index:3000"></i>
+    	<center>
+	    <p style="font-weight:bold;font-size:14px;">Catenzo Unisex Backpack/Ransel - Canvas 458 St 042</p><br>
+	    <img src="./asset/img/tasbranded.jpg" class="img-responsive" style="z-index:1;">
+	    <div style="font-weight:bold;font-size:30px;color:#74c5e6;" class="price">
+	    	<a class="price-label" style="text-decoration:none;cursor: pointer;" title="" data-toggle="tooltip" data-placement="right" val="20">$20</a>
+		</div>
+		<div class="rating" style="padding: 5px 0 10px 0;">Rating :
+			<label for="stars-rating-5"><i class="fa fa-star text-danger"></i></label>
+			<label for="stars-rating-4"><i class="fa fa-star text-danger"></i></label>
+			<label for="stars-rating-3"><i class="fa fa-star text-danger"></i></label>
+			<label for="stars-rating-2"><i class="fa fa-star text-warning"></i></label>
+			<label for="stars-rating-1"><i class="fa fa-star text-warning"></i></label>
+		</div>
+		<div style="max-width:350px;text-align:left">
+			Ini adalah produk catenzo baru katalog edisi 2016-2017, jangan sampai ketinggalan style anda dengan tampil beda dan fresh dengan Catenzo New edition.
+		</div>
+		<div class="row" style="text-align:left;padding: 20px 0 0 0;">
+			<div class="col-md-12"> 
+				<a href="javascript:void(0);" class="btn btn-warning"><i class="fas fa-cart-plus"></i> Tambah ke Keranjang</a>
+                <a href="javascript:void(0);" class="btn btn-info"><i class="fas fa-info"></i> Detail</a>
+                <a href="javascript:void(0);" class="btn btn-success"><i class="fas fa-check"></i> Beli</a>
+			</div>
+		</div>
+		</center>	
 	</div>
 	<script>
 
@@ -311,18 +286,15 @@
 			$(".price-label").click(function(){
 
 					if(!convert_value){
-						/*
+						
 						$.getJSON('http://apilayer.net/api/live?access_key=1765b1f94dbc6547c53ae57650ebd872&currencies=IDR', function(data) {
-							alert(JSON.stringify(data));
-						});*/
-
-						var json={"success":true,"terms":"https://currencylayer.com/terms","privacy":"https://currencylayer.com/privacy","timestamp":1527822848,"source":"USD","quotes":{"USDIDR":13890}};
-						convert_value=json.quotes.USDIDR;
+							convert_value=data.quotes.USDIDR;
+						});
+						
 					}
+					var hargIDR = parseFloat($(this).attr("val"))*convert_value;
 
-					var hargIDR = $(this).attr("val")*convert_value;
-
-					$(this).attr("title","Rp "+numberFormatter(hargIDR));
+					$(this).attr("data-original-title","Rp "+numberFormatter(hargIDR));
 					$(this).tooltip({trigger: 'manual'});
 	      			$(this).tooltip('toggle');
 	    	});
