--- a/dtl_tas2.html
+++ b/dtl_tas2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Fashion - Network</title>
+    <title>15-Olshop</title>
 	<link rel="stylesheet" type="text/css" href="./asset/fa/web-fonts-with-css/css/fontawesome-all.css">
 	<link href="./asset/css/bootstrap.css" rel="stylesheet">
 	<link href="./asset/css/bootstrap-glyphicons.css" rel="stylesheet">
@@ -26,16 +26,15 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a  href="#">
-                	<img src="./asset/img/logo.png" height="50" width="180"></a>
+                	<img src="./asset/img/logo.png" height="50" width="150" style="border-radius:10px;"></a>
             </div>
-
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="font-family:sans-serif;font-weight:lighter;font-size:18px;">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://localhost/onlineshop/#about">Tentang</a>
+                    <li><a href="#">Tentang</a>
                     </li>
-                    <li><a href="http://localhost/onlineshop/#services">Pelayanan</a>
+                    <li><a href="#">Pelayanan</a>
                     </li>
-                    <li><a href="http://localhost/onlineshop/#contact">Kontak</a>
+                    <li><a href="kontak.html">Kontak</a>
                     </li>
                 </ul>
             </div>
@@ -45,35 +44,33 @@
 	</header>
     <div class="container main-container" style="padding-top:20px;">
 	<!--  Mulai content  -->
-	<div class="row">
-
-        <div class="col-md-6">
-
           <div class="card mt-4">
-            <img class="card-img-top img-fluid" src="./asset/img/tasbranded.jpg"class="img-responsive">
-            <div class="card-body">
-              <h3 class="card-title">Tas Backpack Korean Bag LLC7202</h3>
-              <h4>$100</h4>
-              <p class="card-text">Size produk 17 Inchi
-Dimensi produk 30cm x 15cm x 43cm
-Terdiri dari 1 kompartemen utama dan 1 kompartemen tambahan
-Material utama terbuat dari bahan kanvas serat sintetis dengan permukaan halus
-Disamping kanan dan kiri ransel dilengkapi dengan slot kantong multifungsi
-Struktur bagian dalam ransel berlapis full bahan satin
-Terdapat slot kantong laptop hingga 14 inchi
-Dilengkapi dengan gagang tenteng
-Bagian punggung ransel berlapis busa
-Tali ransel berlapis busa tebal nyaman ketika dipakai
-Desain style korea
-</p>
-              <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
-              4.0 stars
+          	<div class="row">
+	        	<div class="col-lg-3">
+	            	<img class="card-img-top img-fluid" src="./asset/img/tasgunung.jpg"class="img-responsive">
+	            </div>
+		        <div class="col-lg-9"> 
+		            <div class="card-body">
+		              <h3 class="card-title">Catenzo Unisex - Canvas 458 St 042</h3>
+		              <h4>$20</h4>
+		              <p class="card-text">Model Best Seller
+						Harga terbaik
+						Bahan Synthetic
+						Merk Original Catenzo
+						Size 30x45x15 cm
+						Warna Grey
+						6 Ruang Simpan
+						Gratis Rain Cover/Pelindung Hujan
+						Ada Sekat untuk Laptop 14 inch
+						Cocok untuk Sekolah Kuliah dan Kerja
+						</p>
+		              <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+		              4.0 stars
+		          </div>
+		      </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-
 	<footer style="margin-bottom:0">
     	<div class="container">
         	<div class="col-lg-3 col-md-3 col-sm-6">
