--- a/kontak.html
+++ b/kontak.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Fashion - Network</title>
+    <title>15-Olshop</title>
 	<link rel="stylesheet" type="text/css" href="./asset/fa/web-fonts-with-css/css/fontawesome-all.css">
 	<link href="./asset/css/bootstrap.css" rel="stylesheet">
 	<link href="./asset/css/bootstrap-glyphicons.css" rel="stylesheet">
@@ -14,6 +14,8 @@
 	<script src="./asset/js/jquery-3.3.1.min.js"></script>
 	<script src="./asset/js/bootstrap.min.js"></script>
 	<script src="./asset/js/jquery.popupoverlay.js"></script>
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?key=AIzaSyDKtdDVECRaSY2svwFqQgzl2BFsb4pc6EM&libraries=places'></script>
+    <script type="text/javascript" src="./asset/js/locationpicker.jquery.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top gardient" role="navigation">
@@ -26,16 +28,16 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a  href="#">
-                	<img src="./asset/img/logo.png" height="50" width="180"></a>
+                	<img src="./asset/img/logo.png" height="50" width="150" style="border-radius:10px;"></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="font-family:sans-serif;font-weight:lighter;font-size:18px;">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://localhost/onlineshop/#about">Tentang</a>
+                    <li><a href="#">Tentang</a>
                     </li>
-                    <li><a href="http://localhost/onlineshop/#services">Pelayanan</a>
+                    <li><a href="#">Pelayanan</a>
                     </li>
-                    <li><a href="http://localhost/onlineshop/#contact">Kontak</a>
+                    <li><a href="Contact.html">Kontak</a>
                     </li>
                 </ul>
             </div>
@@ -45,30 +47,44 @@
 	</header>
     <div class="container main-container" style="padding-top:20px;">
 	<!--  Mulai content  -->
-	<div class="col-md-4">
-            <form>
-            <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
-            <address>
-                <strong>Twitter, Inc.</strong><br>
-                795 Folsom Ave, Suite 600<br>
-                San Francisco, CA 94107<br>
-                <abbr title="Phone">
-                    Telephone:</abbr>
-                (123) 456-7890
-            </address>
-            <address>
-                <strong>Our Email</strong><br>
-                <a href="mailto:#">cs.domain@domain.tld</a>
-            </address>
-            </form>
-        </div>
-    </div>
-</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+				        <legend><span class="glyphicon glyphicon-globe"></span> Kantor Kami</legend>
+				        	<div class="row">
+				        		<div class="col-lg-8" style="margin:0 auto;">
+					            <div id="examples" style="padding:0 30px 30px 30px;">
+					                <div id="us2" style="min-width: 400px; height: 400px;"></div>
+					                <div class="clearfix">&nbsp;</div>
+					                <div class="clearfix"></div>
+					            </div>
+					        	</div>
+					            <script>
+									$('#us2').locationpicker({
+										location: {
+										latitude: -7.759775899999998,
+										longitude: 110.40882209999995
+									},
+										radius:0,
+										enableAutocomplete: true
+									});
+								 </script>
+								<div class="col-lg-4"> 
+					            <address>
+					                <strong>Fiften OnlineShop</strong><br>
+					                795 Folsom Ave, Suite 600
+					                San Francisco, CA 94107<br>
+					                Jl. Ring Road Utara, Condong Catur, Sleman, Yogyakarta - Indonesia<br>
+									Telp: 081234567891<br>
+									Fax: (0274) 884208<br>
+					                <abbr title="Phone">
+					                    Telephone Alternatif:</abbr>
+					                (123) 456-7890
+					            </address>
+					            <address>
+					                <strong>Email Kami</strong><br>
+					                <a href="mailto:#">E-Mail:olshop15@yahoo.com</a>
+					            </address>
+					        	</div>
+				            </div>
+				        </div>
 
 	<footer style="margin-bottom:0">
     	<div class="container">
