--- a/dtl_tas1.html
+++ b/dtl_tas1.html
@@ -31,9 +31,7 @@
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="font-family:sans-serif;font-weight:lighter;font-size:18px;">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Tentang</a>
-                    </li>
-                    <li><a href="#">Pelayanan</a>
+                    <li><a href="tentang.html">Tentang</a>
                     </li>
                     <li><a href="kontak.html">Kontak</a>
                     </li>
