--- a/tentang.html
+++ b/tentang.html
@@ -14,6 +14,8 @@
 	<script src="./asset/js/jquery-3.3.1.min.js"></script>
 	<script src="./asset/js/bootstrap.min.js"></script>
 	<script src="./asset/js/jquery.popupoverlay.js"></script>
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?key=AIzaSyDKtdDVECRaSY2svwFqQgzl2BFsb4pc6EM&libraries=places'></script>
+    <script type="text/javascript" src="./asset/js/locationpicker.jquery.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top gardient" role="navigation">
@@ -28,6 +30,7 @@
                 <a  href="#">
                 	<img src="./asset/img/logo.png" height="50" width="150" style="border-radius:10px;"></a>
             </div>
+
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="font-family:sans-serif;font-weight:lighter;font-size:18px;">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="tentang.html">Tentang</a>
@@ -42,33 +45,19 @@
 	</header>
     <div class="container main-container" style="padding-top:20px;">
 	<!--  Mulai content  -->
-          <div class="card mt-4">
-          	<div class="row">
-	        	<div class="col-lg-3">
-	            	<img class="card-img-top img-fluid" src="./asset/img/tasgunung.jpg"class="img-responsive">
-	            </div>
-		        <div class="col-lg-9"> 
-		            <div class="card-body">
-		              <h3 class="card-title">Catenzo Unisex - Canvas 458 St 042</h3>
-		              <h4>$20</h4>
-		              <p class="card-text">Model Best Seller
-						Harga terbaik
-						Bahan Synthetic
-						Merk Original Catenzo
-						Size 30x45x15 cm
-						Warna Grey
-						6 Ruang Simpan
-						Gratis Rain Cover/Pelindung Hujan
-						Ada Sekat untuk Laptop 14 inch
-						Cocok untuk Sekolah Kuliah dan Kerja
-						</p>
-		              <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
-		              4.0 stars
-		          </div>
-		      </div>
-            </div>
-          </div>
-        </div>
+				        <legend><span class="glyphicon glyphicon-info-sign"></span> Tentang</legend>
+				        	<div class="row">
+				        		<div class="col-lg-8" style="margin:0 auto;">
+								<p style="padding:20px;">
+					            Diluncurkan pada tahun 2015, fifteen shop merupakan destinasi belanja terpercaya di Indonesia.fifteen shop menawarkan variasi produk dalam berbagai jenis ketegori seperti tas,sepatu, baju muslim, peralatan sholat dan lain-lain.fifteen shop menghadirkan berbagai metode pembayaran, termasuk cash-on-delivery (COD)dan bisa juga kirim melaui jasa pengiriman yang ada di indonesia.untuk memudahkan pelanggan berbelanja, fifteen shop juga mempunyai fitur cicilan menggunakan kartu kredit.fifteen shop di dirikan oleh perusahaan PT.Mandiri group.
+					        	</p>
+								</div>
+								<div class="col-lg-4" style="margin:0 auto;padding-bottom:50px;">
+										<img src="./asset/img/office.jpg" class="img-responsive">
+								</div>
+				            </div>
+				        </div>
+
 	<footer style="margin-bottom:0">
     	<div class="container">
         	<div class="col-lg-3 col-md-3 col-sm-6">
