--- a/kontak.html
+++ b/kontak.html
@@ -32,12 +32,10 @@
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="font-family:sans-serif;font-weight:lighter;font-size:18px;">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Tentang</a>
+               <ul class="nav navbar-nav navbar-right">
+                    <li><a href="tentang.html">Tentang</a>
                     </li>
-                    <li><a href="#">Pelayanan</a>
-                    </li>
-                    <li><a href="Contact.html">Kontak</a>
+                    <li><a href="kontak.html">Kontak</a>
                     </li>
                 </ul>
             </div>
