--- a/Contact.html
+++ b/Contact.html
@@ -45,114 +45,30 @@
 	</header>
     <div class="container main-container" style="padding-top:20px;">
 	<!--  Mulai content  -->
-<div class="row">
-	<div class="col-md-12" style="padding-bottom:20px;">
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="display: block;">
-			  <ol class="carousel-indicators">
-				<li data-target="#carousel-example-generic" data-slide-to="0" class=""></li>
-				<li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-				<li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>
-			  </ol>
-		 
-
-		  <div class="carousel-inner">
-			<div class="item">
-			  <img src="./asset/img/carousel3.jpg" alt="...">
-			</div>
-			<div class="item">
-			  <img src="./asset/img/carousel2.jpg" alt="...">
-			</div>
-			<div class="item active">
-			  <img src="./asset/img/carousel1.jpg" alt="...">
-			</div>
-		  </div>
-			  <a class="left carousel-control" href="http://localhost/onlineshop/#carousel-example-generic" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-			  </a>
-			  <a class="right carousel-control" href="http://localhost/onlineshop/#carousel-example-generic" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right"></span>
-			  </a>
-			</div>
-		</div>
-	</div>
-		<div class="row">
-		<div class="col-md-12">
-			<div class="navbar navbar-inverse" role="navigation" style="border-radius:3px;border:none;">
-						  <form class="navbar-form" role="search" method="get" id="search-form" name="search-form" style="border:none; margin:0px; padding-top:10px;">
-								<div class="btn-group pull-left" style="margin-right:10px;">
-									<a class="btn btn-primary dropdown-toggle blue-button" data-toggle="dropdown" href="http://localhost/onlineshop/#">Kategori <span class="caret"></span></a> 
-									<ul class="dropdown-menu">
-									<li><a href="http://localhost/onlineshop/#">Pakaian</a></li>
-									<li><a href="http://localhost/onlineshop/#">Sepatu</a></li>
-									<li><a href="http://localhost/onlineshop/#">Tas</a></li>
-									<li><a href="http://localhost/onlineshop/#">Aksesoris</a></li>
-									<li><a href="http://localhost/onlineshop/#">Jam Tangan</a></li>
-								  </ul>
-								</div>
-								<div class="input-group">
-									<input type="text" class="form-control" placeholder="Cari Disini.." id="query" name="query" value="" style="width:80%;">
-									<div class="input-group-btn" style="float:left;">
-									<button type="submit" class="btn btn-success" style="height:34px;"><span class="glyphicon glyphicon-search"></span></button>
-								</div>
-							  </div>
-							 </form>
-					 </div>
-		</div>	
-		</div>
-        <div class="row">
-            <div class="col-lg-9 col-sm-12">
-            <div class="row">
-			<ul class="thumbnails" style="list-style-type:none;margin-left:-40px !important;">
-			
-			<li class="col-lg-4 col-md-4 col-sm-3" style="z-index:1;position:relative;">
-              <div class="thumbnail" style="overflow: hidden;z-index:1;">
-			  <div class="corner-ribbon top-left sticky green shadow" style="z-index:999999;opacity: green;">New Product</div>
-			   <img src="./asset/img/tasbranded.jpg" width="100" height="200" style="z-index:1;margin-top:-50px;">
-                <div class="caption">
-                  <p style="font-weight:bold;text-align:center;font-size:13px;">Tas Backpack Korean Bag LLC7202</p>
-                  <p></p><p>Tas ransel bermodel vintage ini sangat cocok utk kalian yang sering beraktifitas outdoor...</p><p></p>
-                  <p align="center"><a href="#fadeandscale" id="button0" class="btn btn-primary btn-block blue-button fadeandscale_open">Lihat</a></p>
-                </div>
-              </div>
-            </li>
-            <li class="col-lg-4 col-md-4 col-sm-3" style="z-index:1;position:relative;">
-              <div class="thumbnail" style="overflow: hidden;z-index:1;">
-			  <div class="corner-ribbon top-left sticky blue shadow" style="z-index:999999;opacity: blue;">Best Seller</div>
-			   <img src="./asset/img/tasgunung.jpg" width="100" height="200" style="z-index:1;margin-top:-50px;">
-                <div class="caption">
-                  <p style="font-weight:bold;text-align:center;font-size:13px;">Catenzo Unisex - Canvas 458 St 042</p>
-                  <p></p><p>Ini adalah produk catenzo baru katalog edisi 2016-2017, jangan sampai ketinggalan...</span></p><p></p>
-                  <p align="center"><a href="#fadeandscale2" id="button0" class="btn btn-primary btn-block blue-button fadeandscale2_open">Lihat</a></p>
-                </div>
-              </div>
-            </li>
-				
-        </ul>
-      </div>
+	<div class="col-md-4">
+            <form>
+            <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
+            <address>
+                <strong>Twitter, Inc.</strong><br>
+                795 Folsom Ave, Suite 600<br>
+                San Francisco, CA 94107<br>
+                <abbr title="Phone">
+                    Telephone:</abbr>
+                (123) 456-7890
+            </address>
+            <address>
+                <strong>Our Email</strong><br>
+                <a href="mailto:#">cs.domain@domain.tld</a>
+            </address>
+            </form>
+        </div>
+    </div>
+</div>
             </div>
-			 <div class="col-lg-3 col-md-6">
-			             <div class="card hovercard" style="background-color:#f1f1f1;border-style:dashed;border-width:6px;border-color: #b1d7e8;">
-							<div class="cardheader" style="margin:3px; border-radius: 5px;">
-							</div>
-							<div class="avatar">
-								<img alt="" src="./asset/img/avatar.png">
-							</div>
-							<div class="info">
-								<div class="title">
-								</div>
-								<div class="desc">A Bussiness Man</div>
-							</div>
-							<div class="bottom" style="text-align:center">
-								<ul class="first-example">
-									<li style="background-image:url(&#39;http://localhost/onlineshop/asset/img/bbm.png&#39;); background-repeat:no-repeat;text-indent:20px;margin-bottom:3px;">Pin BB : 2ACFDUA</li>
-									<li style="background-image:url(&#39;http://localhost/onlineshop/asset/img/wa.png&#39;); background-repeat:no-repeat;text-indent:20px;margin-bottom:3px;">What's App : 085725743948</li>
-									<li style="background-image:url(&#39;http://localhost/onlineshop/asset/img/line.png&#39;); background-repeat:no-repeat;text-indent:20px;margin-bottom:3px;">Line : fashion_network</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-    		</div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 	<footer style="margin-bottom:0">
     	<div class="container">
